Amarok ChangeLog
================
(C) 2002-2010 the Amarok authors.


VERSION 2.3.2-Beta 1
  FEATURES:
    * File browser: added forward and back buttons for accessing navigate history.
    * Organize Dialog: added a way to save multiple file formats as presets. (BR 122672)
    * Filtering: added default presets to the drop down menu of the collection
      search widget.
    * Filtering: track format can now be used as filter keyword in the
      collection browser, e.g. "format:flac".
    * Filtering: track file size can now be used as filter keyword in the
      collection browser, e.g. "filesize:<12" for tracks under 12Mb;
      "filesize:25" for tracks that are between 25 and 26Mb.
    * Filtering: tracks that were added to the collection since/before a
      certain time can now be filtered using, e.g. "added:<1w".
    * Filtering: added ability to filter last played date in the collection
      browser, e.g. "played:<3d".

  CHANGES:
    * Refresh the albums context applet when the collection is updated.
    * Don't allow the last visible playlist source in User Playlists to be hidden.
    * "Play Media" dialog now remembers the last used directory. (BR 231092)
    * Organize Dialog: tweaked the layout to fit better on smaller resolutions (BR 238000)
    * Filtering: added year suffix for date filters in the collection browser.
    * Last.fm features that require user authentication are now disabled
      by default.
    * Ignore "DJ" prefix when sorting in collection browser. (BR 181955)
      Patch by Richard Longland <rlongland@hotmail.com>.

  BUGFIXES:
    * Fixed crash when navigating using "Places" in the file browser. (BR 240338)
    * Fixed error dialog popup if the stored directory is no longer accessible
      when using the file browser. (BR 234286)
    * Single clicking a file in the file browser now selects it instead of
      appending to the playlist by default in single-click mode. (BR 233171)