@@ -23,9 +23,13 @@
 #include "core-impl/collections/support/CollectionManager.h"
 #include "core/collections/MetaQueryMaker.h"
 
+#include <KDateTime>
 #include <KGlobal>
 #include <KLocale>
 #include <KMessageBox>
+
+#include <QSpinBox>
+#include <QDateEdit>
 
 EditFilterDialog::EditFilterDialog( QWidget* parent, const QString &text )
     : KDialog( parent )
@@ -62,11 +66,16 @@ EditFilterDialog::EditFilterDialog( QWidget* parent, const QString &text )
     setButtonToolTip( User2, i18n( "Remove last appended filter" ) );
     setButtonGuiItem( User2, user2Button );
 
+    // set current date
+    QDate currentDate = KDateTime::currentLocalDate();
+    m_ui.minDateEdit->setDate( currentDate );
+    m_ui.maxDateEdit->setDate( currentDate );
+
     connect( m_ui.keywordCombo, SIGNAL(activated(const QString&)),
                                 SLOT(selectedAttribute(const QString&)) );
 
-    connect( m_ui.minimum, SIGNAL(valueChanged(int)), SLOT(minSpinChanged(int)) );
-    connect( m_ui.maximum, SIGNAL(valueChanged(int)), SLOT(maxSpinChanged(int)) );
+    connect( m_ui.minSpinBox, SIGNAL(valueChanged(int)), SLOT(minSpinChanged(int)) );
+    connect( m_ui.maxSpinBox, SIGNAL(valueChanged(int)), SLOT(maxSpinChanged(int)) );
 
     // check the "One Value Choosing" by default
     chooseOneValue();
@@ -152,8 +161,8 @@ QString EditFilterDialog::keywordConditionNumeric( const QString& keyword ) cons
     // this member is called when there is a keyword that needs numeric attributes
     QString result;
 
-    const int minVal = m_ui.minimum->value();
-    const int maxVal = m_ui.maximum->value();
+    const int minVal = m_ui.minSpinBox->value();
+    const int maxVal = m_ui.maxSpinBox->value();
     const QString &condition = m_ui.conditionCombo->currentText();
     const bool toInvert = m_ui.invertButton->isChecked();
 
@@ -184,6 +193,46 @@ QString EditFilterDialog::keywordConditionNumeric( const QString& keyword ) cons
     return result;
 }
 
+QString EditFilterDialog::keywordConditionDate( const QString &keyword ) const
+{
+    const QString &condition = m_ui.conditionCombo->currentText();
+    const QDate &minDate = m_ui.minDateEdit->date();
+    const QDate &maxDate = m_ui.maxDateEdit->date();
+    const QDate &today = KDateTime::currentLocalDate();
+    const bool toInvert = m_ui.invertButton->isChecked();
+
+    QString result( keyword + ':' );
+
+    if( condition.compare( i18n("Equal To") ) == 0 )
+    {
+        result += QString::number( minDate.daysTo(today) ) + 'd';
+        if( toInvert )
+            result.prepend( QChar('-') );
+    }
+    else if( condition.compare( i18n("Smaller Than") ) == 0 )
+    {
+        result += '<' + QString::number( minDate.daysTo(today) ) + 'd';
+        if( toInvert )
+            result.prepend( QChar('-') );
+    }
+    else if( condition.compare( i18n("Larger Than") ) == 0 )
+    {
+        result += '>' + QString::number( minDate.daysTo(today) ) + 'd' ;
+        if( toInvert )
+            result.prepend( QChar('-') );
+    }
+    else if( condition.compare( i18n("Between") ) == 0 )
+    {
+        result += QString( "%1%2d %3:%4%5d" )
+            .arg( toInvert ? QChar('<') : QChar('>') )
+            .arg( QString::number( maxDate.daysTo(today) ) )
+            .arg( keyword )
+            .arg( toInvert ? QChar('>') : QChar('<') )
+            .arg( QString::number( minDate.daysTo(today) ) );
+    }
+    return result;
+}
+
 // SLOTS
 void EditFilterDialog::selectedAttribute( const QString &attr ) // SLOT
 {
@@ -199,72 +248,68 @@ void EditFilterDialog::selectedAttribute( const QString &attr ) // SLOT
     }
     else if( attr.compare( i18n("Bit Rate") ) == 0 )
     {
-        m_ui.minimum->setValue( 128 );
-        m_ui.maximum->setValue( 384 );
+        m_ui.minSpinBox->setValue( 128 );
+        m_ui.maxSpinBox->setValue( 384 );
         valueWanted();
     }
     else if( attr.compare( i18n("Sample Rate") ) == 0 )
     {
-        m_ui.minimum->setValue( 8000 );
-        m_ui.maximum->setValue( 48000 );
+        m_ui.minSpinBox->setValue( 8000 );
+        m_ui.maxSpinBox->setValue( 48000 );
         valueWanted();
     }
     else if( attr.compare( i18n("File Size") ) == 0 )
     {
-        m_ui.minimum->setValue( 0 );
-        m_ui.maximum->setValue( 200000 );
+        m_ui.minSpinBox->setValue( 0 );
+        m_ui.maxSpinBox->setValue( 200000 );
         valueWanted();
     }
     else if( attr.compare( i18n("Year") ) == 0 )
     {
-        m_ui.minimum->setValue( QDate::currentDate().year() );
-        m_ui.maximum->setValue( QDate::currentDate().year() );
+        m_ui.minSpinBox->setValue( QDate::currentDate().year() );
+        m_ui.maxSpinBox->setValue( QDate::currentDate().year() );
         valueWanted();
     }
     else if( attr.compare( i18n("BPM") ) == 0 )
     {
-        m_ui.minimum->setValue( 60 );
-        m_ui.maximum->setValue( 120 );
+        m_ui.minSpinBox->setValue( 60 );
+        m_ui.maxSpinBox->setValue( 120 );
         valueWanted();
     }
     else if( attr.compare( i18n("Track Number") ) == 0 )
     {
-        m_ui.minimum->setValue( 1 );
-        m_ui.maximum->setValue( 100 );
+        m_ui.minSpinBox->setValue( 1 );
+        m_ui.maxSpinBox->setValue( 100 );
         valueWanted();
     }
     else if( attr.compare( i18n("Track Length") ) == 0 )
     {
-        m_ui.minimum->setValue( 0 );
-        m_ui.maximum->setValue( 3600 );
+        m_ui.minSpinBox->setValue( 0 );
+        m_ui.maxSpinBox->setValue( 3600 );
         valueWanted();
     }
     else if( attr.compare( i18n("Disc Number") ) == 0 )
     {
-        m_ui.minimum->setValue( 1 );
-        m_ui.maximum->setValue( 10 );
+        m_ui.minSpinBox->setValue( 1 );
+        m_ui.maxSpinBox->setValue( 10 );
         valueWanted();
     }
     else if( attr.compare( i18n("Playcount") ) == 0 )
     {
-        m_ui.minimum->setValue( 0 );
-        m_ui.maximum->setValue( 1000 );
+        m_ui.minSpinBox->setValue( 0 );
+        m_ui.maxSpinBox->setValue( 1000 );
         valueWanted();
     }
     else if( attr.compare( i18n("Score") ) == 0 )
     {
-        m_ui.minimum->setValue( 0 );
-        m_ui.maximum->setValue( 100 );
+        m_ui.minSpinBox->setValue( 0 );
+        m_ui.maxSpinBox->setValue( 100 );
         valueWanted();
     }
     else if( attr.compare( i18n("Rating") ) == 0 )
     {
-        m_ui.minimum->setValue( 0 );
-        m_ui.maximum->setValue( 10 );
-        valueWanted();
-    }
-    else if( attr.compare( i18n("Last Played") ) == 0 ) // TODO: add to ui
-    {
+        m_ui.minSpinBox->setValue( 0 );
+        m_ui.maxSpinBox->setValue( 10 );
         valueWanted();
     }
     else if( attr.compare( i18n("Album") ) == 0 )
@@ -301,20 +346,37 @@ void EditFilterDialog::selectedAttribute( const QString &attr ) // SLOT
     {
         textWanted( KIcon("filename-comment-amarok") );
     }
+    else if( attr.compare( i18n("Added") ) == 0 )
+    {
+        dateWanted();
+    }
+    else if( attr.compare( i18n("Last Played") ) == 0 )
+    {
+        dateWanted();
+    }
     else
         textWanted();
 }
 
 void EditFilterDialog::minSpinChanged( int value ) // SLOT
 {
-    if( value > m_ui.maximum->value() )
-        m_ui.maximum->setValue( value );
+    if( value > m_ui.maxSpinBox->value() )
+        m_ui.maxSpinBox->setValue( value );
 }
 
 void EditFilterDialog::maxSpinChanged( int value ) // SLOT
 {
-    if( m_ui.minimum->value() > value )
-        m_ui.minimum->setValue( value );
+    if( m_ui.minSpinBox->value() > value )
+        m_ui.minSpinBox->setValue( value );
+}
+
+void EditFilterDialog::dateWanted() // SLOT
+{
+    m_ui.editKeywordBox->setEnabled( false );
+    m_ui.valueGroupBox->setEnabled( true );
+    m_ui.minStack->setCurrentWidget( m_ui.minDateWidget );
+    m_ui.maxStack->setCurrentWidget( m_ui.maxDateWidget );
+
 }
 
 void EditFilterDialog::textWanted( const KIcon &icon ) // SLOT
@@ -345,6 +407,8 @@ void EditFilterDialog::valueWanted() // SLOT
 {
     m_ui.editKeywordBox->setEnabled( false );
     m_ui.valueGroupBox->setEnabled( true );
+    m_ui.minStack->setCurrentWidget( m_ui.minSpinWidget );
+    m_ui.maxStack->setCurrentWidget( m_ui.maxSpinWidget );
     m_ui.editKeywordBox->completionObject()->clear();
     m_ui.editKeywordBox->clear();
 }
@@ -360,13 +424,15 @@ void EditFilterDialog::chooseCondition( int condition ) // SLOT
 void EditFilterDialog::chooseOneValue() // SLOT
 {
     m_ui.andLabel->setEnabled( false );
-    m_ui.maximum->setEnabled( false );
+    m_ui.maxSpinBox->setEnabled( false );
+    m_ui.maxDateEdit->setEnabled( false );
 }
 
 void EditFilterDialog::chooseMinMaxValue() // SLOT
 {
     m_ui.andLabel->setEnabled( true );
-    m_ui.maximum->setEnabled( true );
+    m_ui.maxSpinBox->setEnabled( true );
+    m_ui.maxDateEdit->setEnabled( true );
 }
 
 void EditFilterDialog::slotDefault() // SLOT
@@ -466,6 +532,14 @@ void EditFilterDialog::slotDefault() // SLOT
     {
         m_filterText += QString( "%1:\"%2\"" )
             .arg( keywordConditionText(i18n("label")) ).arg( m_ui.editKeywordBox->currentText() );
+    }
+    else if( attr.compare( i18n("Added") ) == 0 )
+    {
+        m_filterText += keywordConditionDate( i18n("added") );
+    }
+    else if( attr.compare( i18n("Last Played") ) == 0 )
+    {
+        m_filterText += keywordConditionDate( i18n("played") );
     }
     else if( attr.compare( i18n("Track Length") ) == 0 )
     {
