@@ -28,7 +28,7 @@
     <height>500</height>
    </size>
   </property>
-  <layout class="QVBoxLayout" name="verticalLayout">
+  <layout class="QHBoxLayout" name="horizontalLayout_4">
    <item>
     <layout class="QGridLayout" name="topGridLayout" rowstretch="0,0,0,0,0">
      <item row="0" column="0" colspan="2">
@@ -103,6 +103,11 @@
             </item>
             <item>
              <property name="text">
+              <string>Added</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
               <string>Album</string>
              </property>
             </item>
@@ -154,6 +159,11 @@
             <item>
              <property name="text">
               <string>Label</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
+              <string>Last Played</string>
              </property>
             </item>
             <item>
@@ -285,16 +295,53 @@
            </widget>
           </item>
           <item>
-           <widget class="QSpinBox" name="minimum">
+           <widget class="QStackedWidget" name="minStack">
             <property name="sizePolicy">
-             <sizepolicy hsizetype="MinimumExpanding" vsizetype="Fixed">
+             <sizepolicy hsizetype="MinimumExpanding" vsizetype="Preferred">
               <horstretch>0</horstretch>
               <verstretch>0</verstretch>
              </sizepolicy>
             </property>
-            <property name="maximum">
-             <number>100000000</number>
+            <property name="currentIndex">
+             <number>1</number>
             </property>
+            <widget class="QWidget" name="minSpinWidget">
+             <layout class="QHBoxLayout" name="horizontalLayout_3">
+              <item>
+               <widget class="QSpinBox" name="minSpinBox">
+                <property name="sizePolicy">
+                 <sizepolicy hsizetype="MinimumExpanding" vsizetype="Fixed">
+                  <horstretch>0</horstretch>
+                  <verstretch>0</verstretch>
+                 </sizepolicy>
+                </property>
+                <property name="maximum">
+                 <number>100000000</number>
+                </property>
+               </widget>
+              </item>
+             </layout>
+            </widget>
+            <widget class="QWidget" name="minDateWidget">
+             <layout class="QHBoxLayout" name="horizontalLayout_2">
+              <item>
+               <widget class="QDateEdit" name="minDateEdit">
+                <property name="sizePolicy">
+                 <sizepolicy hsizetype="MinimumExpanding" vsizetype="Fixed">
+                  <horstretch>0</horstretch>
+                  <verstretch>0</verstretch>
+                 </sizepolicy>
+                </property>
+                <property name="displayFormat">
+                 <string>dd MMM yyyy</string>
+                </property>
+                <property name="calendarPopup">
+                 <bool>true</bool>
+                </property>
+               </widget>
+              </item>
+             </layout>
+            </widget>
            </widget>
           </item>
           <item>
@@ -314,16 +361,47 @@
            </widget>
           </item>
           <item>
-           <widget class="QSpinBox" name="maximum">
+           <widget class="QStackedWidget" name="maxStack">
             <property name="sizePolicy">
-             <sizepolicy hsizetype="MinimumExpanding" vsizetype="Fixed">
+             <sizepolicy hsizetype="MinimumExpanding" vsizetype="Preferred">
               <horstretch>0</horstretch>
               <verstretch>0</verstretch>
              </sizepolicy>
             </property>
-            <property name="maximum">
-             <number>100000000</number>
+            <property name="currentIndex">
+             <number>1</number>
             </property>
+            <widget class="QWidget" name="maxSpinWidget">
+             <layout class="QHBoxLayout" name="horizontalLayout_5">
+              <item>
+               <widget class="QSpinBox" name="maxSpinBox">
+                <property name="sizePolicy">
+                 <sizepolicy hsizetype="MinimumExpanding" vsizetype="Fixed">
+                  <horstretch>0</horstretch>
+                  <verstretch>0</verstretch>
+                 </sizepolicy>
+                </property>
+                <property name="maximum">
+                 <number>100000000</number>
+                </property>
+               </widget>
+              </item>
+             </layout>
+            </widget>
+            <widget class="QWidget" name="maxDateWidget">
+             <layout class="QHBoxLayout" name="horizontalLayout_6">
+              <item>
+               <widget class="QDateEdit" name="maxDateEdit">
+                <property name="displayFormat">
+                 <string>dd MMM yyyy</string>
+                </property>
+                <property name="calendarPopup">
+                 <bool>true</bool>
+                </property>
+               </widget>
+              </item>
+             </layout>
+            </widget>
            </widget>
           </item>
          </layout>
